--- a/summary/02.md
+++ b/summary/02.md
@@ -2,7 +2,9 @@
 
 ## 학습 주제
 
-- JSX 슬롯(Slot)
-- JSX, HTML과 차이점
-- JSX 공백 문제
-- 엑서사이즈 (디자인 시안 → React × JSX)
+- [x] JSX 슬롯(Slot)
+- [x] JSX 주석(commnet)
+- [x] JSX 속성 데이터 바인딩(valid, invalid)
+- [ ] JSX, HTML과 차이점
+- [ ] JSX 공백 문제
+- [ ] 엑서사이즈 (디자인 시안 → React × JSX)
