--- a/summary/05.md
+++ b/summary/05.md
@@ -2,13 +2,13 @@
 
 ## 학습 주제
 
-- [ ] 엑서사이즈 - 고객 관리 컴포넌트
-- [ ] 프레그먼트 컴포넌트
-- [ ] 이터레이션
-  - [ ] 데이터 매핑
-  - [ ] 렌더 리스트
-  - [ ] 키 속성(key prop)
-- [ ] 엑서사이즈 - 고객 관리 데이터 + 렌더 리스트
+- [x] 엑서사이즈 - 고객 관리 컴포넌트
+- [x] 프레그먼트 컴포넌트
+- [x] 이터레이션
+  - [x] 데이터 매핑
+  - [x] 렌더 리스트
+  - [x] 키 속성(key prop)
+- [x] 엑서사이즈 - 고객 관리 데이터 + 렌더 리스트
 - [ ] 엑서사이즈 - 아바타 리스트
 - [ ] 엑서사이즈 - 쇼핑 카트 테이블
 - [ ] 조건부 렌더링
