[원론] JS 문법을 사용해서 리액트 조건부 렌더링
1. 조건문
2. 조건 연산자 식
3. nullish 병합 연산자
4. 옵셔널 체이닝

--- a/summary/06.md
+++ b/summary/06.md
@@ -6,7 +6,7 @@
 - [보류] 엑서사이즈 - 쇼핑 카트 테이블
 - [x] 조건부 렌더링
   - [x] if 문 활용
-  - [ ] 제어 흐름 연산자 활용
+  - [x] 제어 흐름 연산자 활용
   - [ ] 터너리(ternary) 활용
   - [ ] 표시(show) & 감춤(hide)
   - [ ] 스크린 리더(screen reader) 지원
