--- a/summary/07.md
+++ b/summary/07.md
@@ -4,9 +4,9 @@
 
 - [ ] 엑서사이즈 - 쇼핑 카트 테이블
 - [x] 조건부 렌더링
-  - [ ] JavaScript 객체 합성의 함정에 유의 🐈‍⬛
-- [ ] 컴포넌트 독립 테스트 - Storybook 소개
-- [ ] 엑서사이즈 - 배지(badge) 렌더링
+  - [x] JavaScript 객체 합성의 함정에 유의 🐈‍⬛
+- [x] 컴포넌트 독립 테스트 - Storybook 소개
+- [x] 엑서사이즈 - 배지(badge) 렌더링
 - [ ] 엑서사이즈 - 노티피케이션(Notification)
 - [ ] 엑서사이즈 - 그래프(Graph)
 - [ ] 엑서사이즈 - 그리드(Grid)
