--- a/summary/11.md
+++ b/summary/11.md
@@ -6,7 +6,7 @@
   - [ ] 로컬 스토리지 읽기/쓰기
   - [x] 네트워크 요청/응답 처리
   - [x] DOM 객체 접근/조작
-  - [ ] React.useEffect 훅 ([참고](https://react.dev/reference/react/useEffect))
+  - [x] React.useEffect 훅 ([참고](https://react.dev/reference/react/useEffect))
   - [ ] React.useRef 훅 ([참고](https://react.dev/reference/react/useRef))
   - [x] Fetch API ([참고](https://developer.mozilla.org/ko/docs/Web/API/Fetch_API))
   - [ ] Axios 라이브러리 ([참고](https://axios-http.com/kr/))
